<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="a2017_2018.pact34.teech.RegisterStudentActivity">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_name"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:ems="10"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:ems="10"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/editEtablissement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_etablissement"
            android:ems="10"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/editVille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_ville"
            android:ems="10"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"/>

    <EditText
        android:id="@+id/editClasse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_classe"
        android:ems="10"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="visible" />

    <Button
        android:id="@+id/buttonNextStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:onClick="verifyFields" />


    </LinearLayout>

